# legacy

./: CMakeLists.txt  CODE_OF_CONDUCT.md  LICENSE.md  NOTES.md  README.md
.github/: CONTRIBUTING.md  FUNDING.yml
Blueprints/: Brujeria.cmake  Coven.cmake
Languages/: CMakeCythonInformation.cmake  CMakeDetermineGoCompiler.cmake  CMakeDetermineRustCompiler.cmake  CMakeGoCompiler.cmake.in  CMakeGoInformation.cmake  CMakeRustInformation.cmake  CMakeTestCythonCompiler.cmake  CMakeTestRustCompiler.cmake
Layouts/: Coven.cmake
Modules/: Builtins.cmake  DefaultLayout.cmake  Environment.cmake  Fetch.cmake  Generators.cmake  Project.cmake  Properties.cmake  Tools.cmake  Vars.cmake
Templates/: Makefile.in  cpack.cmake  package-config.cmake.in  package.pc.in
Templates/Check/: CMakeLists.txt  main.cxx.in
Toolchains/: Android.cmake  Arduino.cmake  QNX.cmake  RaspberryPi.cmake
languages/: CMakeCythonCompiler.cmake.in  CMakeCythonInformation.cmake  CMakeDetermineCythonCompiler.cmake  CMakeTestCythonCompiler.cmake
modules/: AcquireDependencies.cmake  AddGitSubproject.cmake  AddPackage.cmake  AddSubproject.cmake  Algorithm.cmake  Base.cmake  Breakout.cmake  CheckCompilerFlag.cmake  CheckComponent.cmake  CheckEnvironment.cmake  CheckFindPackage.cmake  CheckHeaders.cmake  CheckSymbol.cmake  CheckSymbolDefined.cmake  CheckSymbolExists.cmake  CheckTypeExists.cmake  DefaultLayout.cmake  Dump.cmake  Fetch.cmake  FindPackage.cmake  Git.cmake  Halt.cmake  IXM.cmake  ImportLibrary.cmake  Option.cmake  Override.cmake  PackageSearch.cmake  Print.cmake  ProjectSettings.cmake  (+19 more)
(+311 files in other folders)
